<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.williams.asd.TodayGoal"
    android:background="#ff52b1ff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todayGoal"
        android:id="@+id/textView3"
        android:textSize="50dp"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/todayGoal"
        android:textSize="100dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/addOne"
        android:id="@+id/btnAddOne"
        android:onClick="btnAddOne"
        android:background="@drawable/flatorange_selector"
        android:textSize="25dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/addTwo"
        android:id="@+id/btnAddTwo"
        android:onClick="btnAddTwo"
        android:background="@drawable/flatorange_selector"
        android:textSize="25dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/addThree"
        android:id="@+id/btnAddThree"
        android:onClick="btnAddThree"
        android:background="@drawable/flatorange_selector"
        android:textSize="25dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_push_up"
        android:id="@+id/goal"
        android:layout_marginBottom="38dp"
        android:textSize="25dp"
        android:layout_above="@+id/button6"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/button6"
        android:onClick="btnStart"
        android:background="@drawable/flatgreen_selector"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/buttonBack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:id="@+id/buttonBack"
        android:onClick="btnBack"
        android:background="@drawable/flatred_selector"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textViewLastPushup"
        android:textSize="35dp"
        android:layout_alignBottom="@+id/goal"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />
</RelativeLayout>
