<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff76ffbf">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageVievTitle"
        android:src="@drawable/pushuptitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/imageView" />
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageView"
        android:src="@drawable/loopy"
        android:layout_marginBottom="71dp"
        android:layout_above="@+id/btnStart"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/btnStart"
        android:onClick="btnStart"
        android:background="@drawable/flatblue_selector"
        android:textColor="@android:color/white"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/btnDailyRecord"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Records"
        android:id="@+id/btnDailyRecord"
        android:onClick="btnDailyRecords"
        android:background="@drawable/flatgreen_selector"
        android:textColor="@android:color/white"
        android:layout_marginBottom="21dp"
        android:layout_above="@+id/btnSettings"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_notication"
        android:id="@+id/btnSettings"
        android:onClick="btnSettings"
        android:background="@drawable/flatorange_selector"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
